# linebot-training-backend

./: .gitignore  Dockerfile  README.md  app.py  config.py  package.json  pyproject.toml  requirements.txt  test_optimization.py  verify_api.py  verify_mock_data.py
docs/: system_analysis.md  system_design.md
firebase/: firebase_init.py
models/: event.py  team.py  user.py  user_team.py
repositories/: base_repository.py  team_repository.py  user_repository.py
routes/: auth_routes.py  event_routes.py  linebot_routes.py  team_routes.py  test_routes.py  user_routes.py
tests/: conftest.py  test_quota.py
utils/: auth.py  mock_data.py  quota.py
